As an initial test.. here we are.

--- a/japan/20th/index.html
+++ b/japan/20th/index.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>SEGA | ソニック20周年公式サイト | トップページ</title>
+<title>SEGA | Sonic 20th Anniversary Official Website | Top page</title>
 <meta name="Author" content="(C) SEGA" />
-<meta name="keyword" content="ソニック20周年,SONIC CHANNEL,ソニックチャンネル,SEGA,セガ,SONICTEAM,ソニックチーム,SONIC,ソニック" />
-<meta name="description" content="『ソニック20周年』公式サイトへようこそ！" />
+<meta name="keyword" content="Sonic's 20th Anniversary,SONIC CHANNEL,Sonic Channel,SEGA,Sega,SONICTEAM,Sonic Team,SONIC,Sonic" />
+<meta name="description" content="Welcome to the official website of &quot;Sonic's 20th Anniversary&quot;!" />
 <!--[if lt IE 9]>
 	<script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js"></script>
 <![endif]-->
@@ -24,47 +24,47 @@
 	<h1><a href="http://sega.jp/"><img src="common/image/common-header_sega.gif" alt="SEGA" width="97" height="32" /></a></h1>
 	<h2><a href="http://www.segasammy.co.jp/"><img src="common/image/common-header_segasammy.gif" alt="SEGA-SAMMY GROUP" width="74" height="24" /></a></h2>
 	<ul>
-		<li id="header-corporate"><a href="http://sega.jp/corp/">会社情報</a></li>
-		<li id="header-contact"><a href="http://sega.jp/contact/">お問い合わせ</a></li>
-		<li id="header-sitemap"><a href="http://sega.jp/sitemap/">サイトマップ</a></li>
+		<li id="header-corporate"><a href="http://sega.jp/corp/">About Us</a></li>
+		<li id="header-contact"><a href="http://sega.jp/contact/">Contact Us</a></li>
+		<li id="header-sitemap"><a href="http://sega.jp/sitemap/">Site Map</a></li>
 	</ul>
 </header>
-<h1 id="contents-flash">『ソニック20周年』公式サイト<noscript></noscript></h1>
+<h1 id="contents-flash">&quot;Sonic's 20th Anniversary&quot: Official Website<noscript></noscript></h1>
 <div id="top-common">
 	<div>
 		<nav id="common-navigation">
-			<h2>コンテンツナビゲーション</h2>
+			<h2>Content Navigation</h2>
 			<ul>
-				<li id="navigation-topics"><a href="topics/index.html">トピックス</a><span class="newInfo">NEW</span></li>
-				<li id="navigation-history"><a href="history/index.html">年表</a></li>
-				<li id="navigation-enjoy"><a href="enjoy/index.html">おたのしみ</a><span class="newInfo">NEW</span></li>
+				<li id="navigation-topics"><a href="topics/index.html">Topics</a><span class="newInfo">NEW</span></li>
+				<li id="navigation-history"><a href="history/index.html">Chronology</a></li>
+				<li id="navigation-enjoy"><a href="enjoy/index.html">Enjoyment</a><span class="newInfo">NEW</span></li>
 			</ul>
 		</nav>
         <div id="common-mainbanner">
         	<a href="topics/index.html#event-sonic20th_campaign"><img src="image/banner_sonic20th_campaign.jpg" width="580" height="143"></a>
         	<a href="enjoy/index.html#contents-enjoy01"><img src="image/banner_enjoy_message.jpg" width="580" height="150"></a>
        	</div>
-    <h2>更新情報</h2>
+    <h2>Update Information</h2>
 		<div id="common-infomation">			
 		</div>
 	</div>
 	<ul id="common-banner">
-		<li><a href="item/index.html"><img src="image/banner_goods.jpg" alt="グッズ紹介" width="270" height="148"></a></li>
-		<li><a href="../SonicGenerations.1"><img src="image/banner_generations.jpg" alt="ソニックジェネレーションズ" width="270" height="101"></a></li>
-		<li><a href="http://itunes.apple.com/jp/app/id438613275?mt=8"><img src="image/banner_anniversary.gif" alt="iPhone/iPod touch向けソニック20周年記念無料アプリ｢Sonic 20th Anniversary｣好評配信中！" width="270" height="101"></a></li>
-		<li><a href="http://sonic-tweet.jp/login/"><img src="image/banner_sonictweet.gif" alt="みんなとつながるTwitterクライアント！ツイートでキャラクターカードを集めよう！" width="270" height="101"></a></li>
+		<li><a href="item/index.html"><img src="image/banner_goods.jpg" alt="Goods" width="270" height="148"></a></li>
+		<li><a href="../SonicGenerations.1"><img src="image/banner_generations.jpg" alt="Sonic Generations" width="270" height="101"></a></li>
+		<li><a href="http://itunes.apple.com/jp/app/id438613275?mt=8"><img src="image/banner_anniversary.gif" alt="&quot;Sonic 20th Anniversary&quot;, a free app for iPhone/iPod touch, is now available!" width="270" height="101"></a></li>
+		<li><a href="http://sonic-tweet.jp/login/"><img src="image/banner_sonictweet.gif" alt="A Twitter client that connects with everyone! Collect character cards by tweeting!" width="270" height="101"></a></li>
 	</ul>
 </div>
 <footer>
 	<ul>
 		<li><a href="http://www.sonicteam.com/"><img src="common/image/logo_st.png" alt="SONIC TEAM" width="78" height="24" /></a></li>
-		<li><a href="../SonicChannel/index.html"><img src="common/image/logo_sonicchannel.png" alt="ソニックチャンネル" width="78" height="20" /></a></li>
+		<li><a href="../SonicChannel/index.html"><img src="common/image/logo_sonicchannel.png" alt="Sonic Channel" width="78" height="20" /></a></li>
 		<li><img src="common/image/mobile.gif" alt="QRコード" width="68" height="81"></li>
-		<li><a href="http://twitter.com/#!/sonic20th"><img src="common/image/twitter.png" alt="twitterでフォローしてください。" width="160" height="27"></a></li>
+		<li><a href="http://twitter.com/#!/sonic20th"><img src="common/image/twitter.png" alt="Please follow us on Twitter." width="160" height="27"></a></li>
 	</ul>
 	<p>&copy;SEGA<br>
-		『ソニック20周年』公式サイトは、株式会社セガが運営しております。<br />
-		[<a href="http://sega.jp/contact/soft/">本サイトに関するお問い合わせはこちら</a>] </p>
+		The &quot;Sonic 20th Anniversary&quot; official website is operated by SEGA Corporation.<br />
+		[<a href="http://sega.jp/contact/soft/">For inquiries about this site, click here.</a>] </p>
 </footer>
 
 
