Why didn't this update earlier?

--- a/sonichq/main/frames/menu2.htm
+++ b/sonichq/main/frames/menu2.htm
@@ -2,7 +2,7 @@
 <head>
 <title>Untitled Document</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<base href=http://www.sonichq.org/>
+<base href=/sonichq/>
 </head>
 
 <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0">
@@ -14,7 +14,7 @@
   <AREA SHAPE=RECT COORDS="255,26,326,38" HREF="cartoon"  ALT=""  TARGET="main" OnMouseOut="window.status=''; return true"  OnMouseOver="window.status=' Sonic Animation'; return true">
   <AREA SHAPE=RECT COORDS="256,38,320,50" HREF="games"  ALT=""  TARGET="main"  OnMouseOut="window.status=''; return true"  OnMouseOver="window.status='Games Page'; return true">
   <AREA SHAPE=RECT COORDS="256,50,321,63" HREF="music"  ALT=""  TARGET="main"  OnMouseOut="window.status=''; return true"  OnMouseOver="window.status='Music Page'; return true">
-  <AREA SHAPE=RECT COORDS="330,1,409,12" HREF="http://pub12.ezboard.com/bsonichqcommunity"  ALT=""  TARGET="main"  OnMouseOut="window.status=''; return true"  OnMouseOver="window.status='Emerald Chatstation'; return true">
+  <AREA SHAPE=RECT COORDS="330,1,409,12" HREF="https://web.archive.org/20011101000000/http://pub12.ezboard.com/bsonichqcommunity"  ALT=""  TARGET="main"  OnMouseOut="window.status=''; return true"  OnMouseOver="window.status='Emerald Chatstation'; return true">
   <AREA SHAPE=RECT COORDS="331,14,391,24" HREF="qa"  ALT=""  TARGET="main"  OnMouseOut="window.status=''; return true"  OnMouseOver="window.status='Question And Answer'; return true">
   <AREA SHAPE=RECT COORDS="330,26,378,38" HREF="features"  ALT="Features And Specials"  TARGET="main"  OnMouseOut="window.status=''; return true"  OnMouseOver="window.status='Features'; return true">
   <AREA SHAPE=RECT COORDS="329,38,384,49" HREF="dir"  ALT="Link Directory"  TARGET="main"  OnMouseOut="window.status=''; return true"  OnMouseOver="window.status='Link Directory'; return true">
@@ -23,9 +23,9 @@
   <AREA SHAPE=RECT COORDS="413,15,477,25" HREF="store/sonicstore.htm"  ALT="Store"  TARGET="main"  OnMouseOut="window.status=''; return true"  OnMouseOver="window.status='Sonic Store'; return true">
   <AREA SHAPE=RECT COORDS="413,27,461,36" HREF="forum/"  ALT="Sonic HQ Chat"  TARGET="main"  OnMouseOut="window.status=''; return true"  OnMouseOver="window.status='Features And Specials'; return true">
   <AREA SHAPE=RECT COORDS="412,39,471,49" HREF="fanfair/fan-fic"  ALT="Fanfiction"  TARGET="main"  OnMouseOut="window.status=''; return true"  OnMouseOver="window.status='Fanfiction'; return true">
-  <AREA SHAPE=RECT COORDS="631,46,666,59" HREF="http://www.sonichq.org/main/staff.php"  ALT="Staff"  TARGET="main"  OnMouseOut="window.status=''; return true"  OnMouseOver="window.status='Staff'; return true">
-  <AREA SHAPE=RECT COORDS="675,48,728,61" HREF="http://www.sonichq.org/awards.htm"  ALT="Awards"  TARGET="main"  OnMouseOut="window.status=''; return true"  OnMouseOver="window.status='Awards'; return true">
-  <AREA SHAPE=RECT COORDS="736,47,790,60" HREF="http://www.sonichq.org/main/nostalgia/"  ALT="History"  TARGET="main"  OnMouseOut="window.status=''; return true"  OnMouseOver="window.status='Nostalgia'; return true">
+  <AREA SHAPE=RECT COORDS="631,46,666,59" HREF="main/staff.php"  ALT="Staff"  TARGET="main"  OnMouseOut="window.status=''; return true"  OnMouseOver="window.status='Staff'; return true">
+  <AREA SHAPE=RECT COORDS="675,48,728,61" HREF="awards.htm"  ALT="Awards"  TARGET="main"  OnMouseOut="window.status=''; return true"  OnMouseOver="window.status='Awards'; return true">
+  <AREA SHAPE=RECT COORDS="736,47,790,60" HREF="main/nostalgia/"  ALT="History"  TARGET="main"  OnMouseOut="window.status=''; return true"  OnMouseOver="window.status='Nostalgia'; return true">
 </MAP>
 </body>
 </html>
