--- a/sonichq/main/frames/menu3.htm
+++ b/sonichq/main/frames/menu3.htm
@@ -2,7 +2,7 @@
 <head>
 <title>Frames Menu</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<base href=http://www.sonichq.org/>
+<base href=/sonichq/>
 </head>
 
 <body bgcolor="#0000FF" topmargin="0" leftmargin="0" marginheight="0" marginwidth="0">
@@ -16,7 +16,7 @@
 <AREA SHAPE=RECT COORDS="324,32,395,44" HREF="cartoon/" TARGET="main">
 <AREA SHAPE=RECT COORDS="324,44,414,57" HREF="music/" TARGET="main">
 <AREA SHAPE=RECT COORDS="323,58,405,71" HREF="dir/" TARGET="main">
-<AREA SHAPE=RECT COORDS="416,0,495,12" HREF="http://pub12.ezboard.com/bsonichqcommunity" TARGET="main">
+<AREA SHAPE=RECT COORDS="416,0,495,12" HREF="https://web.archive.org/20011101000000/http://pub12.ezboard.com/bsonichqcommunity" TARGET="main">
 <AREA SHAPE=RECT COORDS="415,11,479,23" HREF="qa/" TARGET="main">
 <AREA SHAPE=RECT COORDS="417,22,467,33" HREF="features/" TARGET="main">
 <AREA SHAPE=RECT COORDS="415,32,479,45" HREF="images/" TARGET="main">
