--- a/sonichq/main/nostalgia/index.html
+++ b/sonichq/main/nostalgia/index.html
@@ -8,7 +8,7 @@
 <center>
 
 <table width=100% border=1 cellspacing=0 width=150 bordercolorlight="blue" bordercolordark=23238E><tr><td>
-<center><img src="Top.jpg" src2="http://www.geocities.com/EnchantedForest/Dell/7834/Top.jpg" align=left alt="Sonic HQ Geo Logo"></center>
+<center><img src="Top.jpg" src2="/sonichq/geocities/EnchantedForest/Dell/7834/Top.jpg" align=left alt="Sonic HQ Geo Logo"></center>
 </td>
 
 <td>
@@ -56,7 +56,7 @@ Game Index relaunched with new design - May 7, 2001
 333,333 - Vector - 5:28pm Pacific Jan 7, 2000<br>
 350,000 - Brian Sapinski - 4:30pm Pacific  Feb 1, 2000<br>
 400,000 - Brian Searles - April 11, 2000<br>
-450,000 - <a href=http://www.mooglecavern.com target=_blank>Kulock</a> - June 23, 2000<br>
+450,000 - <a href=https://web.archive.org/20011101000000/http://www.mooglecavern.com target=_blank>Kulock</a> - June 23, 2000<br>
 500,000 - Hiroshi - 4:28am Pacific August 20, 2000<br>
 550,000 - Douchie - October 13, 2000<br>
 700,000 - Ray The Squirrel - March 12, 2001
