--- a/sonichq/main/staff.htm
+++ b/sonichq/main/staff.htm
@@ -15,12 +15,12 @@
 <br>&nbsp;
 
 <table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH="100%">
-<tr><td width=19><img src="/topleft.gif" width=19></td>
+<tr><td width=19><img src="/sonichq/topleft.gif" width=19></td>
 
 <td bgcolor=black width=100%><font color=ffa500 font face=arial font size=4>
  <b>Who We Are - Staff, Contact, and Our Goal</b></td>
 
-<td width=19><img src="/topright.gif" width=19></td></tr>
+<td width=19><img src="/sonichq/topright.gif" width=19></td></tr>
 </table>
 
 <!table width="100%" border=1 cellspacing=0 width=150 bordercolor=000000>
@@ -31,7 +31,7 @@
 <b><font face=Arial color=ffffff>Our Goal And Cornerstone</b>
 </td></table>
 
-<img src="/images/chars/sonicadv/s&k.jpg" align=right>
+<img src="/sonichq/images/chars/sonicadv/s&k.jpg" align=right>
 
 <blockquote><br><font face="Arial"><font size=-1>Every page needs a goal. Basically - what we strive for and what we 
 want to do. Sonic HQ for a long time has had the stigmata of being a big boisterous page with a lot of "staffers" when in 
@@ -50,7 +50,7 @@ And no Zifei isn't on the page anymore. This is Vector and WB's baby now. And wh
 he did the page, we are who we are. And this page - we hope - will be a reflection of that. So don't come in here 
 expecting the past, expect the present. We're not Zifei, we're Vector and WB and thats all we want to be. Nothing more, and nothing less.
 
-<img src="/images/chars/sonicadv/s&a.jpg" align=left>
+<img src="/sonichq/images/chars/sonicadv/s&a.jpg" align=left>
 <p>And to end off our "mission statement" as we coined it, when Sonic HQ first started, the staff was made up of only a few 
 people. Now the staff count have risen to more than ten. Just because there are multiple people on the page, doesn't make it easier to maintain. It actually makes it harder since so many people want to do so 
 many things. So we try to come together to discuss what we want so no one steps on each others toes. Its not as easy as it sounds, but we think we do a good job of it nonetheless. 
@@ -72,7 +72,7 @@ There you will find our profiles, info about us, contacts and other stuffs...<br
 <br><a href=mailto:neoblackbat@hotmail.com>Co-Webmasters E-Mail - neoblackbat@hotmail.com</a>
 <br><a href=mailto:freddyg@sprynet.com>Co-Webmasters E-Mail - freddyg@sprynet.com</a>
 
-<center><br><a href="/" target="_top"><font face=arial><b>Return To The Main Page?</a></b></center>
+<center><br><a href="/sonichq/" target="_top"><font face=arial><b>Return To The Main Page?</a></b></center>
 <br></center>
 
 <table width=100% border=0 cellspacing=0><td align=center valign=middle bgcolor=595959>
@@ -125,7 +125,7 @@ News, Comics, and games page. An artist in his own right, Dub also has a section
 
 <p>Co-webmaster of Sonic HQ/Marketing director. Vector is THE most knowledgeable HTML member on the staff -
 from regular to Javascript, this guy can do it all! Friendly and well spoken, Vector, a college student, is responsible for all the randomized midis and table designs and other stuff you see on the site!
-Vector currently maintains the Games Page and gives his advice wherever else it is needed. Vec is also the Vice-President of <a href=http://www.sonicnext.com target="_whole">SonicNEXT</a>.</TABLE>
+Vector currently maintains the Games Page and gives his advice wherever else it is needed. Vec is also the Vice-President of <a href=https://web.archive.org/20011101000000/http://www.sonicnext.com target="_whole">SonicNEXT</a>.</TABLE>
 
 <TABLE BORDER=0 WIDTH=600><TR><TD><CENTER>
 <IMG SRC=staffimages/lien.jpg ALIGN=top width=100 height=113>
@@ -167,16 +167,16 @@ maintainter of the fan-fic page. While not working on that, he writes fics himse
 <p>Tristan is ready and willing to go search the deepest, darkest reaches of the Internet to bring you news from all aspects 
 on the Sonic community.  He is also ready to test every code and analyze every piece of information he gets.  Then, he'll 
 put them in the Game Info section.  In his spare time, if he ever has any due to working on his site, 
-<a href="http://www.wheres.com/etc/sonic/">TSSZ</a>, he listens to the 1,000+ news themes he has, watch the news from 
+<a href="https://web.archive.org/20011101000000/http://www.wheres.com/etc/sonic/">TSSZ</a>, he listens to the 1,000+ news themes he has, watch the news from 
 different cities every chance he has, and tell the public that he is not insane because he's into TV News... Tristan also 
 wants to anchor the local news from a top TV market, such as Philly, New York, or, his favorite for the obvious reasons, Los Angeles.  Maybe you'll see him someday on your local affiliate.  Who knows?<p>
-Mr. T also runs <a href=http://sonic.sega-zone.com target="_whole">The Super Sonic Zone</a> and <a href=http://www.sonicnext.com target="_whole">SonicNEXT</a>.
+Mr. T also runs <a href=https://web.archive.org/20011101000000/http://sonic.sega-zone.com target="_whole">The Super Sonic Zone</a> and <a href=https://web.archive.org/20011101000000/http://www.sonicnext.com target="_whole">SonicNEXT</a>.
 </TABLE>
 
 <TABLE BORDER=0 WIDTH=70% cellspacing=4 cellpadding=4><TR><TD><CENTER>
-<table border=0><tr><td><IMG SRC=http://members.aol.com/TemplarNY/torch.gif></td>
+<table border=0><tr><td><IMG SRC=https://web.archive.org/20011101000000/http://members.aol.com/TemplarNY/torch.gif></td>
 <td><IMG SRC=staffimages/tether.gif></td>
-<td><IMG SRC=http://members.aol.com/TemplarNY/torch.gif></td></table>
+<td><IMG SRC=https://web.archive.org/20011101000000/http://members.aol.com/TemplarNY/torch.gif></td></table>
 <IMG SRC=staffimages/tether.jpg>
 <FONT SIZE=-1><A HREF="mailto:mobius_tblood@hotmail.com">mobius_tblood@hotmail.com</A></TD><br>
 <TD><FONT SIZE=-1><b><FONT SIZE=-1><font color="blue">Vassilis Detsikas</b> - "Mobius Tetherblood"
@@ -224,7 +224,7 @@ He also likes to listen to/ read almost anything, and play videogames and the co
 
 <TABLE BORDER=0 WIDTH=600 cellpadding=4 cellspacing=4><TR><TD><CENTER>[Picture Unavailable]<br><FONT SIZE=-1><A HREF="mailto:videogamer12@juno.com">videogamer12@juno.com</A></TD><br><TD><FONT SIZE=-1><b><FONT SIZE=-1><font color="blue">Henry</b> - "Henry Prower"<br><b>Position</b>: Features, Directory, Fan Games, and general site stuff maintainer<br><b>AIM</b>: HEH111<br><b>ICQ</b>: NA</font><p>Henry is, as he calls it, "EXTREMELY insane." ^_^  Actually, he's pretty cool, and a major video game fan.  He collects systems, his favorite game of all is Sonic 1 for Sega Genesis, and his favorite gaming magazine was Game Players.  He's looking for copies of the old Diceist Sega magazine.  Henry is also a game tester for Sonikku Team.  At 12, he's one of the youngest of the staff.  Henry does various things for the site, including Features, the Directory, and, once it's open, Fan Games.
 
-<p>Henry is also the owner of <a href=http://playstationtwo.cjb.net target="_blank">playstationtwo.cjb.net</a></TABLE>
+<p>Henry is also the owner of <a href=https://web.archive.org/20011101000000/http://playstationtwo.cjb.net target="_blank">playstationtwo.cjb.net</a></TABLE>
 
 <TABLE BORDER=0 WIDTH=600><TR><TD><CENTER>
 <IMG SRC=staffimages/fishboy.gif ALIGN=top><br>
@@ -238,7 +238,7 @@ He also likes to listen to/ read almost anything, and play videogames and the co
 <p>Everybody loves Raymond...erm....Roger !!! Yes, everyone needs a Fishboy on thier staff! Fishboy's are housebroken, they're nice and kind, and they don't wet the floor - well...not much....for a fish...
 All you need give them is water and a Directory Page and you can be forever happy! Take Roger for instance - our local Fishboy - he's a really nice guy! He got us on various webrings, sorted our what was once our messed up Links Page, and is even making a 404 page for us.
 All in all Fishboy is a great guy, and he'd make a nice entree at Captain D's too! ^_______^<p>
-Fish also runs his own personal (and very good) Sonic webpage <a href=http://sonicsages.cjb.net target="_whole">Sonic Sages</a>.</TABLE>
+Fish also runs his own personal (and very good) Sonic webpage <a href=https://web.archive.org/20011101000000/http://sonicsages.cjb.net target="_whole">Sonic Sages</a>.</TABLE>
 
 <TABLE BORDER=0 WIDTH=600><TR><TD><CENTER>
 <br><IMG SRC=staffimages/rlanduck.gif ALIGN=top>
@@ -252,7 +252,7 @@ Fish also runs his own personal (and very good) Sonic webpage <a href=http://son
 <p>Way down under in Australia sits slaphappy Rlan. A cordial chap by nature (except when it comes to Sega Ozisot) Rlan is a really mellow dude with a really mellow demeanor!
 Friendly, always willing to put in advice and two cents, he also sits on staff as one of the 4 news directors with WB, MTB, and Tristan!
 
-<p>Rlan also runs <a href=http://ssrg.emulationzone.org/fanmade/ target="_whole">Sonic Fan Games HQ</a>.
+<p>Rlan also runs <a href=https://web.archive.org/20011101000000/http://ssrg.emulationzone.org/fanmade/ target="_whole">Sonic Fan Games HQ</a>.
 </TABLE>
 
 
@@ -303,7 +303,7 @@ She's two times the fun wrapped up and rolled into one!!!.....Or is that a Wuzzl
 <blockquote>
 <TABLE BORDER=0 WIDTH=600><TR><TD><CENTER>
 <IMG SRC=staffimages/andy.jpg ALIGN=top >
-<FONT SIZE=-1><A HREF=http://www.emulationzone.org target="_blank">http://www.emulationzone.org/</A></TD><br>
+<FONT SIZE=-1><A HREF=https://web.archive.org/20011101000000/http://www.emulationzone.org target="_blank">https://web.archive.org/20011101000000/http://www.emulationzone.org/</A></TD><br>
 <TD><FONT SIZE=-1><b><font color="orange">Andy Wolan And The Emulation Zone </font></b> -
 Special thanks goes to the Emulation Zone for letting us use thier space ! They saved us from the evil demonspawn of webservice that is..."Geocities!!!!" - and for that fate worse than death we are ever grateful! Seriously though, we'd like to thank Andy and 
 the staff at the Emulation Zone for hosting us! It really was nice of them! Pop over to thier page and give it a peek when you finish here!</TABLE>
@@ -345,7 +345,7 @@ and is also well versed on the doings of Dudley Do-Right, Snidely Whiplash, Nell
 
 <TABLE BORDER=0 WIDTH=600><TR><TD><CENTER>
 <IMG SRC=staffimages/jared.jpg ALIGN=top >
-<FONT SIZE=-1><A HREF=http://www.videogamers.com/ggibbon/index.htm target="_blank">Neo Green Hill Zone And Forum</A></TD><br>
+<FONT SIZE=-1><A HREF=https://web.archive.org/20011101000000/http://www.videogamers.com/ggibbon/index.htm target="_blank">Neo Green Hill Zone And Forum</A></TD><br>
 <TD><FONT SIZE=-1><b><font color="orange">Jared Matte aka. Green Gibbon </font></b> -
 Never think in the presence of the Green Gibbon! Thinking is illegal - and so is Pikachu! Green Gibbon is the owner of the coveted Neo Green Hill Zone! See the Gameplay Page on our Games section? We would <u>NEVER</u> have been able to pull that off without the help of the NGHZ owner and several members of the forum there including Martin Braid, Possesed Spam, Bo Bayles, 
 DH Master, Micheal "G. Silver" Stearns, Dave Bulmer, James "Popcorn" Duffy, and a certain friend of mine named Roland "Jim Doe" Lowery! Pop over to the NGHZ and give the guys a holler! And if you're good little boys and girls, you might even get a Drano Cookie! *smile*</TABLE>
@@ -359,9 +359,9 @@ DH Master, Micheal "G. Silver" Stearns, Dave Bulmer, James "Popcorn" Duffy, and 
 <!main table bottom>
 <table border=0 cellspacing=0 cellpadding=0>
 <tr>
-<td><img SRC="http://www.sonichq.org/bottomleft.gif" BORDER=0 height=20></td>
+<td><img SRC="/sonichq/bottomleft.gif" BORDER=0 height=20></td>
 <td width=100% bgcolor=000000><font color="white" size=-3 face="arial">&nbsp;</font></td>
-<td><img SRC="http://www.sonichq.org/bottomright.gif" BORDER=0 height=20></td>
+<td><img SRC="/sonichq/bottomright.gif" BORDER=0 height=20></td>
 </tr>
 </table>
 <!end main table bottom>
