Whoops, forgot the JP files.

--- a/japan/20th/enjoy/index.html
+++ b/japan/20th/enjoy/index.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>SEGA | ソニック20周年公式サイト | おたのしみ</title>
+<title>SEGA | Sonic's 20th Anniversary Official Website - Enjoyment</title>
 <meta name="Author" content="(C) SEGA" />
-<meta name="keyword" content="ソニック20周年,SONIC CHANNEL,ソニックチャンネル,SEGA,セガ,SONICTEAM,ソニックチーム,SONIC,ソニック" />
-<meta name="description" content="『ソニック20周年』公式サイトへようこそ！" />
+<meta name="keyword" content="Sonic's 20th Anniversary,SONIC CHANNEL,Sonic Channel,SEGA,Sega,SONICTEAM,Sonic Team,SONIC,Sonic" />
+<meta name="description" content="Welcome to the official website of &quot;Sonic's 20th Anniversary&quot;" />
 <!--[if lt IE 9]>
 	<script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js"></script>
 <![endif]-->
@@ -30,61 +30,61 @@
 	<h1><a href="http://sega.jp/"><img src="../common/image/common-header_sega.gif" alt="SEGA" width="97" height="32" /></a></h1>
 	<h2><a href="http://www.segasammy.co.jp/"><img src="../common/image/common-header_segasammy.gif" alt="SEGA-SAMMY GROUP" width="74" height="24" /></a></h2>
 	<ul>
-		<li id="header-corporate"><a href="http://sega.jp/corp/">会社情報</a></li>
-		<li id="header-contact"><a href="http://sega.jp/contact/">お問い合わせ</a></li>
-		<li id="header-sitemap"><a href="http://sega.jp/sitemap/">サイトマップ</a></li>
+		<li id="header-corporate"><a href="http://sega.jp/corp/">About Us</a></li>
+		<li id="header-contact"><a href="http://sega.jp/contact/">Contact Us</a></li>
+		<li id="header-sitemap"><a href="http://sega.jp/sitemap/">Site Map</a></li>
 	</ul>
 </header>
 
 <div id="common-navigation">
-	<h1><a href="../index.html">『ソニック20周年』公式サイト</a></h1>
+	<h1><a href="../index.html">&quot;Sonic's 20th Anniversary&quot; Official Website</a></h1>
 	<nav>
-		<h2>コンテンツナビゲーション</h2>
+		<h2>Content Navigation</h2>
 		<ul>
-			<li id="navigation-topics"><a href="../topics/index.html">トピックス</a><span class="newInfo">NEW</span></li>
-			<li id="navigation-history"><a href="../history/index.html">年表</a></li>
-			<li id="navigation-enjoy"><a href="index.html">おたのしみ</a><span class="newInfo">NEW</span></li>
+			<li id="navigation-topics"><a href="../topics/index.html">Topics</a><span class="newInfo">NEW</span></li>
+			<li id="navigation-history"><a href="../history/index.html">Chronology</a></li>
+			<li id="navigation-enjoy"><a href="index.html">Enjoyment</a><span class="newInfo">NEW</span></li>
 		</ul>
 	</nav>
 </div>
 <div id="common-contents">
-	<h2>おたのしみ</h2>
+	<h2>Enjoyment</h2>
 	
 			<nav id="contents-navigation">
 			<ul>
-				<li><a href="index.html#contents-enjoy01">ムービー</a></li>
-				<li><a href="index.html#contents-enjoy02">かべがみ</a></li>
-				<li><a href="index.html#contents-enjoy03">Twitterアイコン</a></li>
+				<li><a href="index.html#contents-enjoy01">Movie</a></li>
+				<li><a href="index.html#contents-enjoy02">Wallpaper</a></li>
+				<li><a href="index.html#contents-enjoy03">Twitter Icons</a></li>
 			</ul>
 			
 		</nav>
 		<article>
-<h3 id="contents-enjoy01">ムービー</h3>
+<h3 id="contents-enjoy01">Movie</h3>
     <div class="contensSubstance">
     	<div id="contents-flash">
     		<article>
-    			<h4>お祝いメッセージビデオ</h4>
-    			<p>ソニック20周年のお祝いに様々な方からお祝いメッセージをいただきました。</p>
+    			<h4>Congratulatory Message Video</h4>
+    			<p>We received congratulatory messages from various people to celebrate Sonic's 20th anniversary.</p>
     			<ul id="movieChange01" class="twitter_icon">
-    				<li data="movie_02" title="中村正人氏（DREAMS COME TRUE）"><img src="image/movie_thm1.jpg" alt="" width="128" height="73">中村正人氏</li>
-    				<li data="movie_03" title="中裕司氏（株式会社プロペ　代表取締役社長）"><img src="image/movie_thm2.jpg" alt="" width="128" height="73">中裕司氏</li>
-    				<li data="movie_04" title="大島直人氏（株式会社アーゼスト　取締役副社長）"><img src="image/movie_thm3.jpg" alt="" width="128" height="73">大島直人氏</li>
-    				<li data="movie_05" title="浜村弘一氏（株式会社エンターブレイン　代表取締役社長）"><img src="image/movie_thm4.jpg" alt="" width="128" height="73">浜村弘一氏
+    				<li data="movie_02" title="Masato Nakamura (DREAMS COME TRUE)"><img src="image/movie_thm1.jpg" alt="" width="128" height="73">Masato Nakamura</li>
+    				<li data="movie_03" title="Yuji Naka (President and Representative Director, Prope Co., Ltd.)"><img src="image/movie_thm2.jpg" alt="" width="128" height="73">Yuji Naka</li>
+    				<li data="movie_04" title="Naoto Oshima (Executive Vice President, Arzest Corporation)"><img src="image/movie_thm3.jpg" alt="" width="128" height="73">Naoto Oshima</li>
+    				<li data="movie_05" title="Koichi Hmamura (President and Representative Director, Enterbrain Co.)"><img src="image/movie_thm4.jpg" alt="" width="128" height="73">Koichi Hamamura
     					</li>
     				</ul>
     			<div id="movieChange01_txt"></div>
     			<div name="message" class="movie" id="movie_02" data="560-315"></div>
     			</article>
     		<article>
-    			<h4>コマーシャル</h4>
+    			<h4>Commercial (e.g. TV)</h4>
     			<div name="commercial" class="movie" id="movie_01" data="560-420"></div>
     			</article>
     		</div>
     	</div>
-    <h3 id="contents-enjoy02">かべがみ</h3>
+    <h3 id="contents-enjoy02">Wallpaper</h3>
     <div class="contensSubstance">
     	<article>
-    		<h4>20周年記念かべがみ</h4>
+    		<h4>20th Anniversary Wallpaper</h4>
     		<img src="image/wall01.jpg" alt="かべがみ01" width="560" height="350">
     		<ul class="downloadList">
     			<li class="down1024"><a href="image/wall01_1280x1024.zip" onClick="_gaq.push(['_trackEvent', 'download/wallpaper/wall01_1280x1024.zip']);">1280x1024</a></li>
@@ -93,26 +93,26 @@
     			</ul>
     		</article>
     	</div>
-    <h3 id="contents-enjoy03">Twitterアイコン</h3>
+    <h3 id="contents-enjoy03">Twitter Icons</h3>
     <div class="contensSubstance">
     	<article>
     		<ul class="twitter_icon">
-    			<li><a href="image/twitt_icon_sonic.zip"><img src="image/twitt_icon_sonic.jpg" width="128" height="128" >ダウンロード</a></li>
-    			<li><a href="image/twitt_icon_tails.zip"><img src="image/twitt_icon_tails.jpg" width="128" height="128" >ダウンロード</a></li>
-    			<li><a href="image/twitt_icon_knuckles.zip"><img src="image/twitt_icon_knuckles.jpg" width="128" height="128" >ダウンロード</a></li>
-    			<li><a href="image/twitt_icon_amy.zip"><img src="image/twitt_icon_amy.jpg" width="128" height="128" >ダウンロード</a></li>
-    			<li><a href="image/twitt_icon_eggman.zip"><img src="image/twitt_icon_eggman.jpg" width="128" height="128" >ダウンロード</a></li>
-    			<li><a href="image/twitt_icon_shadow.zip"><img src="image/twitt_icon_shadow.jpg" width="128" height="128" >ダウンロード</a></li>
-    			<li><a href="image/twitt_icon_rouge.zip"><img src="image/twitt_icon_rouge.jpg" width="128" height="128" >ダウンロード</a></li>
-    			<li><a href="image/twitt_icon_omega.zip"><img src="image/twitt_icon_omega.jpg" width="128" height="128" >ダウンロード</a></li>
-    			<li><a href="image/twitt_icon_big.zip"><img src="image/twitt_icon_big.jpg" width="128" height="128" >ダウンロード</a></li>
-    			<li><a href="image/twitt_icon_cream.zip"><img src="image/twitt_icon_cream.jpg" width="128" height="128" >ダウンロード</a></li>
-    			<li><a href="image/twitt_icon_blaze.zip"><img src="image/twitt_icon_blaze.jpg" width="128" height="128" >ダウンロード</a></li>
-    			<li><a href="image/twitt_icon_silver.zip"><img src="image/twitt_icon_silver.jpg" width="128" height="128" >ダウンロード</a></li>
-    			<li><a href="image/twitt_icon_metalsonic.zip"><img src="image/twitt_icon_metalsonic.jpg" width="128" height="128" >ダウンロード</a></li>
-    			<li><a href="image/twitt_icon_vecter.zip"><img src="image/twitt_icon_vecter.jpg" width="128" height="128" >ダウンロード</a></li>
-    			<li><a href="image/twitt_icon_charmy.zip"><img src="image/twitt_icon_charmy.jpg" width="128" height="128" >ダウンロード</a></li>
-    			<li><a href="image/twitt_icon_espio.zip"><img src="image/twitt_icon_espio.jpg" width="128" height="128" >ダウンロード</a></li>
+    			<li><a href="image/twitt_icon_sonic.zip"><img src="image/twitt_icon_sonic.jpg" width="128" height="128" >Download</a></li>
+    			<li><a href="image/twitt_icon_tails.zip"><img src="image/twitt_icon_tails.jpg" width="128" height="128" >Download</a></li>
+    			<li><a href="image/twitt_icon_knuckles.zip"><img src="image/twitt_icon_knuckles.jpg" width="128" height="128" >Download</a></li>
+    			<li><a href="image/twitt_icon_amy.zip"><img src="image/twitt_icon_amy.jpg" width="128" height="128" >Download</a></li>
+    			<li><a href="image/twitt_icon_eggman.zip"><img src="image/twitt_icon_eggman.jpg" width="128" height="128" >Download</a></li>
+    			<li><a href="image/twitt_icon_shadow.zip"><img src="image/twitt_icon_shadow.jpg" width="128" height="128" >Download</a></li>
+    			<li><a href="image/twitt_icon_rouge.zip"><img src="image/twitt_icon_rouge.jpg" width="128" height="128" >Download</a></li>
+    			<li><a href="image/twitt_icon_omega.zip"><img src="image/twitt_icon_omega.jpg" width="128" height="128" >Download</a></li>
+    			<li><a href="image/twitt_icon_big.zip"><img src="image/twitt_icon_big.jpg" width="128" height="128" >Download</a></li>
+    			<li><a href="image/twitt_icon_cream.zip"><img src="image/twitt_icon_cream.jpg" width="128" height="128" >Download</a></li>
+    			<li><a href="image/twitt_icon_blaze.zip"><img src="image/twitt_icon_blaze.jpg" width="128" height="128" >Download</a></li>
+    			<li><a href="image/twitt_icon_silver.zip"><img src="image/twitt_icon_silver.jpg" width="128" height="128" >Download</a></li>
+    			<li><a href="image/twitt_icon_metalsonic.zip"><img src="image/twitt_icon_metalsonic.jpg" width="128" height="128" >Download</a></li>
+    			<li><a href="image/twitt_icon_vecter.zip"><img src="image/twitt_icon_vecter.jpg" width="128" height="128" >Download</a></li>
+    			<li><a href="image/twitt_icon_charmy.zip"><img src="image/twitt_icon_charmy.jpg" width="128" height="128" >Download</a></li>
+    			<li><a href="image/twitt_icon_espio.zip"><img src="image/twitt_icon_espio.jpg" width="128" height="128" >Download</a></li>
     			</ul>
     		</article>
     	</div>
