--- a/japan/20th/topics/collaborate-phantasystar_universe.html
+++ b/japan/20th/topics/collaborate-phantasystar_universe.html
@@ -2,15 +2,15 @@
 
 <article>
 <time>2011.06.16</time>
-<h5>『ファンタシースターユニバース』にソニックが登場！</h5>
-<p class="imgLeft"><img src="image/2011061601.jpg" alt="『ファンタシースターユニバース』" width="200" height="122" />セガを代表するオンラインRPG『ファンタシースターユニバース　イルミナスの野望』ではソニックの誕生日をお祝いするゲーム内イベント「SONIC's　Birthday2011」を6/23に開催します。<br />
+<h5>Sonic is coming to Phantasy Star Universe!</h5>
+<p class="imgLeft"><img src="image/2011061601.jpg" alt="Phantasy Star Universe" width="200" height="122" />"Phantasy Star Universe: The Ambition of Illuminus", one of Sega's most popular online RPGs, will hold an in-game event to celebrate Sonic's birthday, "Sonic's Birthday 2011", on June 23.<br />
   <br />
-  ファンタシースターユニバースのガーディアンズコロニーには今年も誕生日をお祝いする飾り付けでにぎわうソニックロビーが登場。</p>
-<p class="imgRight"><img src="image/2011061602.jpg" width="200" height="150" />誕生日の6月23日20時～22時にはソニックとテイルスもグラール太陽系を訪れ、グラール中のロビー、ユニバース間を随時移動しながら、ガーディアンズのみなさんと一緒に誕生日の記念撮影を行います！<br />
+  This year, the Guardians Colony of Phantasy Star Universe will once again be home to the Sonic Lobby, which will be decorated to celebrate his birthday.</p>
+<p class="imgRight"><img src="image/2011061602.jpg" width="200" height="150" />Sonic and Tails will also be visiting the Graal Solar System on their birthday, June 23rd, from 8pm to 10pm, and will be traveling between lobbies and universes throughout Graal to take birthday photos with the Guardians!<br />
   <br />
-  『ファンタシースターユニバース　イルミナスの野望』は現在無料サービス中のWindows PC用SFファンタジーRPGです。
-  クライアントソフト無料、基本プレイ無料でイベントに参加できますので、是非参加してみてはいかがでしょうか。 </p>
-<p><a href="http://phantasystaruniverse.jp/home/">→詳しい情報は『ファンタシースターユニバース　イルミナスの野望』公式サイトにて</a></p>
+  "Phantasy Star Universe: The Ambition of Illuminus" is a science fiction fantasy RPG for Windows PC that is currently available for free.
+  You can participate in the event with free client software and free basic play, so why not join us? </p>
+<p><a href="http://phantasystaruniverse.jp/home/">→For more information, please visit the official website of "Phantasy Star Universe: The Ambition of Illuminus".</a></p>
 </article>
 
 </div>
