--- a/sonichq/megaman/index.html
+++ b/sonichq/megaman/index.html
@@ -3,7 +3,7 @@
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
    <title>Mega Man HQ - The MM Robot Museum</title>
-<script src=http://www.sonichq.org/scripts/megaman-init.js></script>
+<script src=/sonichq/scripts/megaman-init.js></script>
 <style type="text/css">
 <!--
 a:hover {text-decoration:underline}
@@ -14,23 +14,23 @@ A{text-decoration:none}
 
 <script language=JavaScript>
 <!--
-document.write('<link rel=stylesheet href=http://www.sonichq.org/megaman/css/' + theme + '.css type="text/css">')
+document.write('<link rel=stylesheet href=/sonichq/megaman/css/' + theme + '.css type="text/css">')
 //-->
 </script>
 <noscript>
-<link rel=stylesheet href=http://www.sonichq.org/megaman/css/main.css type="text/css">
+<link rel=stylesheet href=/sonichq/megaman/css/main.css type="text/css">
 </noscript>
 </head>
 
-<body text="#000000" bgcolor="white" link=blue vlink=blue background="http://www.sonichq.org/megaman/images/backgrounds/mmgraybg.gif" bgproperties="fixed">
+<body text="#000000" bgcolor="white" link=blue vlink=blue background="/sonichq/megaman/images/backgrounds/mmgraybg.gif" bgproperties="fixed">
 &nbsp;
 
-<center><IFRAME SRC="http://ads1.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO"
+<center><IFRAME SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO"
 MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" VSPACE="0" HSPACE="0">
-<SCRIPT LANGUAGE="JavaScript" SRC="http://ads1.ad-flow.com/?DC=ztnet-ron-top&JS=Y&TARGET=_blank">
+<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&JS=Y&TARGET=_blank">
 </SCRIPT>
 <NOSCRIPT>
-<A HREF="http://ads1.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank" HEIGHT="60" WIDTH="468"><IMG SRC="http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y"></A>
+<A HREF="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank" HEIGHT="60" WIDTH="468"><IMG SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y"></A>
 </NOSCRIPT>
 </IFRAME>
 </center>
@@ -44,7 +44,7 @@ Mega Man HQ</table></span>
 
 <!main table top>
 <p><table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH="100%" class=maintable>
-<tr><td width=19><img src=/topleft.gif width=19></td>
+<tr><td width=19><img src=/sonichq/topleft.gif width=19></td>
 
 <td bgcolor=black width=100% height=50 valign=middle>
 <script language=JavaScript>
@@ -54,12 +54,12 @@ document.write(titlepic + titlelogo)
 </script>
 &nbsp;</td>
 
-<td width=19><img src=/topright.gif width=19></td></tr>
+<td width=19><img src=/sonichq/topright.gif width=19></td></tr>
 </table>
 <!end main table top>
 
 <table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH=100% class=maintable><td valign=middle width=100% bgcolor=black><font size=2>
-<script src=http://www.sonichq.org/scripts/menu.js></script>
+<script src=/sonichq/scripts/menu.js></script>
 <noscript>&nbsp;</noscript>
 </font></td></table>
 
@@ -123,7 +123,7 @@ Over 500 Sonic and Mega Man music files.<br><br>
 <a href=fanfair>Fan Fair</a> - updated 04-29-01
 </table></div>
 <div class=itemtext>
-<center>[<a href=fanfair/edited>Hoaxes & Sprites</a> | <a href=fanfair/fanart>Fan Art</a> | <a href=fanfair/fangames.php3>Fan Games</a> | <a href=fanfair/fancomics>Comics</a> | <a href=/fanfair/humor>Humor</a>]</center>
+<center>[<a href=fanfair/edited>Hoaxes & Sprites</a> | <a href=fanfair/fanart>Fan Art</a> | <a href=fanfair/fangames.php3>Fan Games</a> | <a href=fanfair/fancomics>Comics</a> | <a href=/sonichq/fanfair/humor>Humor</a>]</center>
 Custom sprites, hoaxes, Fan art, fan games, comics, sprite comics, humor, and hosted fan projects<br><br>
 </div>
 <div class=titlebar><table class=glow>
@@ -141,7 +141,7 @@ Music, pics, sprites, windows themes, and videos.<br><br>
 Site stuff, surveys, interactive games, and more.<br><br>
 </div>
 <div class=titlebar><table class=glow>
-<a href=http://pub12.ezboard.com/fsonichqcommunityfrm14 href1=http://bbs.onecenter.com/hq href2=http://disc.server.com/Indices/70464.html>The Robot Museum Forum</a>
+<a href=https://web.archive.org/20011101000000/http://pub12.ezboard.com/fsonichqcommunityfrm14 href1=https://web.archive.org/20011101000000/http://bbs.onecenter.com/hq href2=https://web.archive.org/20011101000000/http://disc.server.com/Indices/70464.html>The Robot Museum Forum</a>
 </table></div>
 <div class=itemtext>
 our message board.  This page is also our guest book, and you can contact the MMHQ staff here.<br><br>
@@ -163,13 +163,13 @@ Info and links for MM sites and fans.<br><br>
 
 <p><!-- Start of Nedstat Basic code -->
 
-<a href="http://usa.nedstatbasic.net/cgi-bin/viewstat?name=mmhq"><img
-src="http://usa.nedstatbasic.net/cgi-bin/nedstat.gif?name=mmhq"
+<a href="https://web.archive.org/20011101000000/http://usa.nedstatbasic.net/cgi-bin/viewstat?name=mmhq"><img
+src="https://web.archive.org/20011101000000/http://usa.nedstatbasic.net/cgi-bin/nedstat.gif?name=mmhq"
 border=0 alt="" nosave width=22 height=22></a>
 <script type="text/javascript" language="JavaScript">
 <!--
  d=document;
- d.write("<img src=\"http://usa.nedstatbasic.net");
+ d.write("<img src=\"https://web.archive.org/20011101000000/http://usa.nedstatbasic.net");
  d.write("/cgi-bin/referstat.gif?");
  d.write("name=mmhq&refer=");
  d.write(escape(top.document.referrer));
@@ -182,9 +182,9 @@ border=0 alt="" nosave width=22 height=22></a>
 
 <br><br><a href=features/updateboard.html target=_blank>Update Board</a>
 
-<br><br>Part of <a href=/ target=_blank>Sonic HQ Network</a>
+<br><br>Part of <a href=/sonichq/ target=_blank>Sonic HQ Network</a>
 
-<br><br>Hosted by <a href=http://www.emulationzone.org target=_blank>Emulation Zone</a>
+<br><br>Hosted by <a href=https://web.archive.org/20011101000000/http://www.emulationzone.org target=_blank>Emulation Zone</a>
 </font></td>
 <td width=2 bgcolor=000000>&nbsp;</td>
 </tr></table>
@@ -192,9 +192,9 @@ border=0 alt="" nosave width=22 height=22></a>
 
 <!main table bottom>
 <table border=0 cellspacing=0 cellpadding=0 width=100% class=maintable><tr>
-<td><img SRC="/bottomleft.gif" BORDER=0 height=20></td>
+<td><img SRC="/sonichq/bottomleft.gif" BORDER=0 height=20></td>
 <td width=99% bgcolor=000000><font color="white" size=-3 face="arial"><center>Page is ©1996-2000 Sonic HQ.  Mega Man & Co. are © Capcom.</center></font></td>
-<td><img SRC="/bottomright.gif" BORDER=0 height=20></td>
+<td><img SRC="/sonichq/bottomright.gif" BORDER=0 height=20></td>
 </tr></table>
 <!end main table bottom>
 
